# Calculation-Tools

./: .clang-format  CMakeLists.txt
include/calculation_tools/: graphic.h  linear_algebra.h  matrix.h  utils.h  vector.h
source/: CMakeLists.txt  calculation_tools.cc
source/ispc/: CMakeLists.txt  basic.ispc  linear_algebra.ispc
test/: CMakeLists.txt  basic_test.cc  linear_algebra_test.cc
